--- a/estado.html
+++ b/estado.html
@@ -1047,11 +1047,11 @@
                 <div class="footer-section">
                     <h3>Servicios</h3>
                     <ul>
-                        <li><a href="info1.html">Consultas Financieras</a></li>
-                        <li><a href="info2.html">Trámites Oficiales</a></li>
-                        <li><a href="info3.html">Documentos Personales</a></li>
-                        <li><a href="info4.html">Información Vehicular</a></li>
-                        <li><a href="info5.html">Situación Fiscal</a></li>
+                        <li><a href="consulta.html">Consultas Financieras</a></li>
+                        <li><a href="registro.html">Trámites Oficiales</a></li>
+                        <li><a href="clave.html">Documentos Personales</a></li>
+                        <li><a href="vehiculos.html">Información Vehicular</a></li>
+                        <li><a href="estado.html">Situación Fiscal</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
