--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                         <div class="method-content active" id="online">
                             <h4>Consulta en línea (método recomendado)</h4>
                             <ol class="steps-list">
-                                <li>Visita el sitio web oficial del Buró de Crédito (<a href="https://www.burodecredito.com.mx" target="_blank">burodecredito.com.mx</a>)</li>
+                                <li>Visita el sitio web oficial del Buró de Crédito</li>
                                 <li>Selecciona la opción "Reporte de Crédito Especial"</li>
                                 <li>Regístrate con tus datos personales (necesitarás tu CURP, RFC y una identificación oficial)</li>
                                 <li>Completa el formulario de solicitud</li>
@@ -603,7 +603,7 @@
         <div class="container">
             <div class="section-header">
                 <h2>Opiniones de Usuarios</h2>
-                <p>Lo que dicen las personas que utilizan nuestros servicios</p>
+                <h3>Lo que dicen las personas que utilizan nuestros servicios</h3>
             </div>
             
             <div class="testimonials-slider">
@@ -654,7 +654,7 @@
         <div class="container">
             <div class="section-header">
                 <h2>Lo que dicen nuestros usuarios</h2>
-                <p>Experiencias reales de personas que han consultado su Buró de Crédito</p>
+                <h3>Experiencias reales de personas que han consultado su Buró de Crédito</h3>
             </div>
             
             <div class="testimonials-slider">
@@ -712,11 +712,11 @@
                 <div class="footer-section">
                     <h3>Servicios</h3>
                     <ul>
-                        <li><a href="info1.html">Consultas Financieras</a></li>
-                        <li><a href="info2.html">Trámites Oficiales</a></li>
-                        <li><a href="info3.html">Documentos Personales</a></li>
-                        <li><a href="info4.html">Información Vehicular</a></li>
-                        <li><a href="info5.html">Situación Fiscal</a></li>
+                        <li><a href="consulta.html">Consultas Financieras</a></li>
+                        <li><a href="registro.html">Trámites Oficiales</a></li>
+                        <li><a href="clave.html">Documentos Personales</a></li>
+                        <li><a href="vehiculos.html">Información Vehicular</a></li>
+                        <li><a href="estado.html">Situación Fiscal</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
