--- a/nosotros.html
+++ b/nosotros.html
@@ -16,11 +16,11 @@
                 <a href="index.html" class="logo">buro-info.com</a>
                 <ul class="nav-links">
                     <li><a href="index.html">Inicio</a></li>
-                    <li><a href="multas.html">Multas</a></li>
-                    <li><a href="imss.html">IMSS</a></li>
-                    <li><a href="curp.html">CURP</a></li>
+                    <li><a href="consulta.html">Consulta</a></li>
+                    <li><a href="registro.html">Registro</a></li>
+                    <li><a href="clave.html">Clave</a></li>
                     <li><a href="vehiculos.html">Vehículos</a></li>
-                    <li><a href="fiscal.html">Fiscal</a></li>
+                    <li><a href="estado.html">Estado</a></li>
                     <li><a href="contacto.html">Contacto</a></li>
                 </ul>
                 <div class="burger">
@@ -160,17 +160,17 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <h3>buro-info.com</h3>
-                    <p>Información útil sobre trámites y consultas en México.</p>
+                    <p>Portal informativo sobre consultas, trámites y documentos oficiales en México.</p>
                 </div>
                 <div class="footer-section">
                     <h3>Enlaces rápidos</h3>
                     <ul>
                         <li><a href="index.html">Inicio</a></li>
-                        <li><a href="multas.html">Multas</a></li>
-                        <li><a href="imss.html">IMSS</a></li>
-                        <li><a href="curp.html">CURP</a></li>
+                        <li><a href="consulta.html">Consulta</a></li>
+                        <li><a href="registro.html">Registro</a></li>
+                        <li><a href="clave.html">Clave</a></li>
                         <li><a href="vehiculos.html">Vehículos</a></li>
-                        <li><a href="fiscal.html">Fiscal</a></li>
+                        <li><a href="estado.html">Estado</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
@@ -182,15 +182,16 @@
                     </ul>
                 </div>
                 <div class="footer-section">
-                    <h3>Acerca de</h3>
+                    <h3>Sobre Nosotros</h3>
                     <ul>
-                        <li><a href="nosotros.html">Sobre Nosotros</a></li>
+                        <li><a href="nosotros.html">Quienes Somos</a></li>
                         <li><a href="contacto.html">Contacto</a></li>
                     </ul>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 buro-info.com - Este sitio web no es una entidad gubernamental.</p>
+                <p>&copy; 2025 buro-info.com - Portal informativo para ciudadanos mexicanos</p>
+                <p class="disclaimer">Este sitio web no es una entidad gubernamental y la información proporcionada es solo con fines informativos.</p>
             </div>
         </div>
     </footer>
@@ -202,13 +203,22 @@
         </svg>
     </div>
 
-    <!-- Banner de cookies -->
+    <!-- Banner de cookies mejorado -->
     <div class="cookie-overlay"></div>
     <div class="cookie-banner">
-        <p>Utilizamos cookies para mejorar tu experiencia en nuestro sitio web. Al continuar navegando, aceptas nuestra política de cookies.</p>
-        <p>Para más información, consulta nuestra <a href="cookies.html">Política de Cookies</a>, <a href="privacidad.html">Política de Privacidad</a> y <a href="terminos.html">Términos de Uso</a>.</p>
+        <div class="cookie-content">
+            <div class="cookie-icon">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"></circle><line x1="12" y1="16" x2="12" y2="12"></line><line x1="12" y1="8" x2="12.01" y2="8"></line></svg>
+            </div>
+            <div class="cookie-text">
+                <h3>Utilizamos cookies</h3>
+                <p>Utilizamos cookies para mejorar tu experiencia en nuestro sitio web. Al continuar navegando, aceptas nuestra política de cookies.</p>
+                <p>Para más información, consulta nuestra <a href="cookies.html">Política de Cookies</a>, <a href="privacidad.html">Política de Privacidad</a> y <a href="terminos.html">Términos de Uso</a>.</p>
+            </div>
+        </div>
         <div class="cookie-buttons">
-            <button class="cookie-btn accept-cookies">Aceptar</button>
+            <button class="cookie-btn accept-cookies">Aceptar todas</button>
+            <button class="cookie-btn cookie-btn-outline">Solo esenciales</button>
         </div>
     </div>
 
