--- a/cookies.html
+++ b/cookies.html
@@ -151,12 +151,11 @@
                 <div class="footer-section">
                     <h3>Enlaces rápidos</h3>
                     <ul>
-                        <li><a href="index.html">Inicio</a></li>
-                        <li><a href="multas.html">Multas</a></li>
-                        <li><a href="imss.html">IMSS</a></li>
-                        <li><a href="curp.html">CURP</a></li>
-                        <li><a href="vehiculos.html">Vehículos</a></li>
-                        <li><a href="fiscal.html">Fiscal</a></li>
+                        <li><a href="consulta.html">Consultas Financieras</a></li>
+                        <li><a href="registro.html">Trámites Oficiales</a></li>
+                        <li><a href="clave.html">Documentos Personales</a></li>
+                        <li><a href="vehiculos.html">Información Vehicular</a></li>
+                        <li><a href="estado.html">Situación Fiscal</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
