--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portal informativo sobre consultas, trámites y documentos oficiales en México. Información útil para ciudadanos mexicanos.">
+    <meta name="keywords" content="buro de credito">
     <title>Portal de Información y Consultas | buro-info.com</title>
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/styles.css">
